--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,23 @@ section{
     }
 }
 
+.heading{
+    background-size: cover !important;
+    background-position: center !important;
+    padding-top: 10rem;
+    padding-bottom: 15rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.heading h1{
+    font-size: 10rem;
+    text-transform: uppercase;
+    color: var(--light-black);
+    text-shadow: var(--text-shadow);
+}
+
 .btn{
     margin-top: 1rem;
     display: inline-block;
@@ -235,8 +252,6 @@ section{
     background: var(--light-bg);
 }
 
-
-
 .home-packages-page .box-container-page {
     display: grid ;
     grid-template-columns: repeat(auto-fit,minmax(20rem,1fr));
@@ -261,8 +276,6 @@ section{
     object-fit: cover;
     transition:  .2s linear;
 }
-
-
 
 .home-packages-page .box-container-page .box .content{
     padding: 2rem;
@@ -295,10 +308,85 @@ section{
 }
 
 .home-offer .content{
-    max-width: 50rem;
+    max-width: 70rem;
     margin: 0 auto;
 }
+
+.home-offer .content h3{
+    font-size: 3.5rem;
+    color: var(--black);
+    text-transform: uppercase;
+}
+
+.home-offer .content p{
+    font-size: 1.5rem;
+    color: var(--light-black);
+    line-height: 2;
+    padding: 1rem 0;
+}
 /* home offer section ends */
+
+
+/* section about starts */
+
+.about{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 3rem;
+}
+
+.about .image{
+    flex: 1 1 41rem;
+}
+
+.about .image img{
+    width: 100%;
+}
+
+.about .content {
+    flex: 1 1 41rem;
+    text-align: center;
+}
+
+.about .content h3{
+    font-size: 3rem;
+    color: var(--black);
+}
+
+.about .content p{
+    font-size: 1.5rem;
+    color: var(--light-black);
+    line-height: 2;
+    padding: 1rem 0;
+}
+
+.about .content .icons-container{
+    margin-top: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    align-items: flex-end;
+}
+
+.about .content .icons-container .icons{
+    background: var(--light-bg);
+    padding: 2rem;
+    flex: 1 1 16rem;
+}
+
+.about .content .icons-container .icons i{
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    color: var(--main-color);
+}
+
+.about .content .icons-container .icons span{
+    font-size: 1.5rem;
+    color: var(--light-black);
+    display: block;
+}
+/* section about ends */
 
 
 /* section service */
