--- a/css/style.css
+++ b/css/style.css
@@ -377,16 +377,67 @@ section{
 
 .about .content .icons-container .icons i{
     font-size: 4rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     color: var(--main-color);
 }
 
 .about .content .icons-container .icons span{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: var(--light-black);
     display: block;
 }
 /* section about ends */
+
+
+/* section reviews starts */
+
+.reviews{
+    background: var(--light-bg);
+}
+
+.reviews .slide{
+    padding: 2rem;
+    border: var(--border);
+    background: var(--white);
+    text-align: center;
+    box-shadow: var(--box-shadow);
+    user-select: none;
+}
+
+.reviews .slide .starts{
+    padding-bottom: .5rem;
+}
+
+.reviews .slide .starts i{
+    font-size: 1.7rem;
+    color: var(--main-color);
+}
+
+.reviews .slide p{
+    font-size: 1.5rem;
+    line-height: 2;
+    color: var(--light-black);
+    padding: 1rem 0;
+}
+
+.reviews .slide h3{
+    font-size: 2rem;
+    color: var(--black);
+}
+
+.reviews .slide span{
+    font-size: 1.5rem;
+    color: var(--main-color);
+    display: block;
+}
+
+.reviews .slide img{
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    margin-top: 1rem;
+}
+/* section reviews ends */
 
 
 /* section service */
