--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     --light-white:#fff9;
     --dark-bg:rgba(0,0,0,.7);
     --light-bg:#eee;
-    --border:.1rem solid var(--black);
+    --border:.1rem solid var(--second-color);
     --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
     --text-shadow:0 1.5rem 3rem rgba(0,0,0,.3);
     --second-color:#213343; 
